api: Flight tasks, NFZ, send drone, PT
